maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:18: error: unclosed character literal
			if (getIndication(i,j)==10000) setIndication(i,j,'')
                                                                         ^JediEscaper:19: error: ')' expected but '}' found.
		}
                ^JediEscaper:21: error: ';' expected but 'true' found.
	return true
               ^