maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
var xBaggle = 0
var yBaggle = 0
for (i <- 0 to getMondeLargeur-1) {
	for (j <- 0 to getMondeHauteur-1) {
		if (aBiscuit(i,j)) {
			xBaggle = i
			yBaggle = j
		}
	}
}

def fini() :Boolean ={
	for (i <- 0 to getMondeLargeur-1) {
		for (j <- 0 to getMondeHauteur-1) {
			if (getIndication(i,j)==9999) return false
			if (getIndication(i,j)==10000) setIndication(i,j,'')
		}
	}
	return true
}

setIndication(xBaggle,yBaggle,0)

def markAround(x:Int,y:Int) ={
	var indic = getIndication(x,y) + 1
	if (y != 0) {
		if (!aMurNord(x,y) && getIndication(x,y-1) == 9999) setIndication(x,y-1,indic)
	}
	if (x != 0) {
		if (!aMurOuest(x,y) && getIndication(x-1,y) == 9999) setIndication(x-1,y,indic)
	}
	if (y != getMondeLargeur-1) {
		if (!aMurNord(x,y+1) && getIndication(x,y+1) == 9999) setIndication(x,y+1,indic)
	}
	if (x != getMondeHauteur-1) {
		if (!aMurOuest(x+1,y) && getIndication(x+1,y) == 9999) setIndication(x+1,y,indic)
	}
}

var x = xBaggle
var y = yBaggle
var num = -1
while (!fini) {
	num += 1
	for (i <- 0 to getMondeLargeur-1) {
		for (j <- 0 to getMondeHauteur-1) {
			if (getIndication(i,j) == num) {
				if (num != 9999) markAround(i,j)
				else setIndication(i,j,10000)
			}
		}
	}
}

}
